--- a/wine_jn.ipynb
+++ b/wine_jn.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: '-f'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-1-3e69f09583e4>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     64\u001B[0m     \u001B[0mtest_y\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mtest\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m\"quality\"\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     65\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 66\u001B[0;31m     \u001B[0malpha\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mfloat\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0msys\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0margv\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m1\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;32mif\u001B[0m \u001B[0mlen\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0msys\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0margv\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m>\u001B[0m \u001B[0;36m1\u001B[0m \u001B[0;32melse\u001B[0m \u001B[0;36m0.5\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     67\u001B[0m     \u001B[0ml1_ratio\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mfloat\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0msys\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0margv\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;36m2\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;32mif\u001B[0m \u001B[0mlen\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0msys\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0margv\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m>\u001B[0m \u001B[0;36m2\u001B[0m \u001B[0;32melse\u001B[0m \u001B[0;36m0.5\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     68\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mValueError\u001B[0m: could not convert string to float: '-f'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The data set used in this example is from http://archive.ics.uci.edu/ml/datasets/Wine+Quality\n",
     "# P. Cortez, A. Cerdeira, F. Almeida, T. Matos and J. Reis.\n",
@@ -37,98 +25,138 @@
     "import mlflow\n",
     "import mlflow.sklearn\n",
     "\n",
-    "import logging\n",
-    "\n",
+    "import logging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "logging.basicConfig(level=logging.WARN)\n",
-    "logger = logging.getLogger(__name__)\n",
-    "\n",
-    "\n",
+    "logger = logging.getLogger(__name__)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "def eval_metrics(actual, pred):\n",
     "    rmse = np.sqrt(mean_squared_error(actual, pred))\n",
     "    mae = mean_absolute_error(actual, pred)\n",
     "    r2 = r2_score(actual, pred)\n",
-    "    return rmse, mae, r2\n",
-    "\n",
-    "\n",
+    "    return rmse, mae, r2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "class MyClass(mlflow.pyfunc.PythonModel):\n",
     "    def __init__(self):\n",
     "        pass\n",
     "\n",
     "    def predict(self, context, model_input):\n",
     "\n",
-    "        pass\n",
+    "        pass"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#     warnings.filterwarnings(\"ignore\")\n",
+    "np.random.seed(40)\n",
     "\n",
+    "# Read the wine-quality csv file from the URL\n",
+    "csv_url = (\n",
+    "    \"http://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/winequality-red.csv\"\n",
+    ")\n",
+    "try:\n",
+    "    data = pd.read_csv(csv_url, sep=\";\")\n",
+    "except Exception as e:\n",
+    "    logger.exception(\n",
+    "        \"Unable to download training & test CSV, check your internet connection. Error: %s\", e\n",
+    "    )"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Split the data into training and test sets. (0.75, 0.25) split.\n",
+    "train, test = train_test_split(data)\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    warnings.filterwarnings(\"ignore\")\n",
-    "    np.random.seed(40)\n",
-    "\n",
-    "    # Read the wine-quality csv file from the URL\n",
-    "    csv_url = (\n",
-    "        \"http://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/winequality-red.csv\"\n",
-    "    )\n",
-    "    try:\n",
-    "        data = pd.read_csv(csv_url, sep=\";\")\n",
-    "    except Exception as e:\n",
-    "        logger.exception(\n",
-    "            \"Unable to download training & test CSV, check your internet connection. Error: %s\", e\n",
-    "        )\n",
-    "\n",
-    "    # Split the data into training and test sets. (0.75, 0.25) split.\n",
-    "    train, test = train_test_split(data)\n",
-    "\n",
-    "    # The predicted column is \"quality\" which is a scalar from [3, 9]\n",
-    "    train_x = train.drop([\"quality\"], axis=1)\n",
-    "    test_x = test.drop([\"quality\"], axis=1)\n",
-    "    train_y = train[[\"quality\"]]\n",
-    "    test_y = test[[\"quality\"]]\n",
-    "\n",
-    "    alpha = float(sys.argv[1]) if len(sys.argv) > 1 else 0.5\n",
-    "    l1_ratio = float(sys.argv[2]) if len(sys.argv) > 2 else 0.5\n",
-    "\n",
-    "    with mlflow.start_run(run_name='var1') as run:\n",
-    "        lr = ElasticNet(alpha=alpha, l1_ratio=l1_ratio, random_state=42)\n",
-    "        lr.fit(train_x, train_y)\n",
-    "\n",
-    "        predicted_qualities = lr.predict(test_x)\n",
-    "\n",
-    "        (rmse, mae, r2) = eval_metrics(test_y, predicted_qualities)\n",
-    "\n",
-    "        print(\"Elasticnet model (alpha=%f, l1_ratio=%f):\" % (alpha, l1_ratio))\n",
-    "        print(\"  RMSE: %s\" % rmse)\n",
-    "        print(\"  MAE: %s\" % mae)\n",
-    "        print(\"  R2: %s\" % r2)\n",
-    "\n",
-    "        mlflow.log_param(\"alpha\", alpha)\n",
-    "        mlflow.log_param(\"l1_ratio\", l1_ratio)\n",
-    "        mlflow.log_metric(\"rmse\", rmse)\n",
-    "        mlflow.log_metric(\"r2\", r2)\n",
-    "        mlflow.log_metric(\"mae\", mae)\n",
-    "\n",
-    "        tracking_url_type_store = urlparse(mlflow.get_tracking_uri()).scheme\n",
-    "\n",
-    "        # Model registry does not work with file store\n",
-    "        if tracking_url_type_store != \"file\":\n",
-    "\n",
-    "            # Register the model\n",
-    "            # There are other ways to use the Model Registry, which depends on the use case,\n",
-    "            # please refer to the doc for more information:\n",
-    "            # https://mlflow.org/docs/latest/model-registry.html#api-workflow\n",
-    "            mlflow.sklearn.log_model(lr, \"model\", registered_model_name=\"ElasticnetWineModel\")\n",
-    "        else:\n",
-    "            file_path = 'my_pkl.pkl'\n",
-    "            with open(file_path, 'wb') as file:\n",
-    "                s = pickle.dump(lr, file)\n",
-    "                # my_model = Model(artifact_path=file_path, run_id=run.info.run_id)\n",
-    "                mlflow.pyfunc.log_model(artifact_path=file_path, python_model=MyClass())\n",
-    "                os.remove(file_path)\n",
-    "                # my_model.add_flavor(name='mlflow.pyfunc')\n",
-    "                # my_model.save('out.pkl')\n",
-    "\n",
-    "\n",
-    "            mlflow.sklearn.log_model(lr, \"model\")\n",
-    "\n"
-   ]
+    "# The predicted column is \"quality\" which is a scalar from [3, 9]\n",
+    "train_x = train.drop([\"quality\"], axis=1)\n",
+    "test_x = test.drop([\"quality\"], axis=1)\n",
+    "train_y = train[[\"quality\"]]\n",
+    "test_y = test[[\"quality\"]]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "alpha = 0.5\n",
+    "l1_ratio = 0.5"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "mlflow.end_run()\n",
+    "run = mlflow.start_run(run_name='var2')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -141,6 +169,230 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "lr = ElasticNet(alpha=alpha, l1_ratio=l1_ratio, random_state=42)\n",
+    "lr.fit(train_x, train_y)\n",
+    "\n",
+    "predicted_qualities = lr.predict(test_x)\n",
+    "\n",
+    "(rmse, mae, r2) = eval_metrics(test_y, predicted_qualities)\n",
+    "\n",
+    "print(\"Elasticnet model (alpha=%f, l1_ratio=%f):\" % (alpha, l1_ratio))\n",
+    "print(\"  RMSE: %s\" % rmse)\n",
+    "print(\"  MAE: %s\" % mae)\n",
+    "print(\"  R2: %s\" % r2)\n",
+    "\n",
+    "mlflow.log_param(\"alpha\", alpha)\n",
+    "mlflow.log_param(\"l1_ratio\", l1_ratio)\n",
+    "mlflow.log_metric(\"rmse\", rmse)\n",
+    "mlflow.log_metric(\"r2\", r2)\n",
+    "mlflow.log_metric(\"mae\", mae)\n",
+    "\n",
+    "tracking_url_type_store = urlparse(mlflow.get_tracking_uri()).scheme\n",
+    "\n",
+    "# Model registry does not work with file store\n",
+    "if tracking_url_type_store != \"file\":\n",
+    "\n",
+    "    # Register the model\n",
+    "    # There are other ways to use the Model Registry, which depends on the use case,\n",
+    "    # please refer to the doc for more information:\n",
+    "    # https://mlflow.org/docs/latest/model-registry.html#api-workflow\n",
+    "    mlflow.sklearn.log_model(lr, \"model\", registered_model_name=\"ElasticnetWineModel\")\n",
+    "else:\n",
+    "    file_path = 'my_pkl.pkl'\n",
+    "    with open(file_path, 'wb') as file:\n",
+    "        s = pickle.dump(lr, file)\n",
+    "        # my_model = Model(artifact_path=file_path, run_id=run.info.run_id)\n",
+    "        mlflow.pyfunc.log_model(artifact_path=file_path, python_model=MyClass())\n",
+    "        os.remove(file_path)\n",
+    "        # my_model.add_flavor(name='mlflow.pyfunc')\n",
+    "        # my_model.save('out.pkl')\n",
+    "\n",
+    "\n",
+    "#     mlflow.sklearn.log_model(lr, \"model\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_metrics(actual, pred):\n",
+    "    rmse = np.sqrt(mean_squared_error(actual, pred))\n",
+    "    mae = mean_absolute_error(actual, pred)\n",
+    "    r2 = r2_score(actual, pred)\n",
+    "    return rmse, mae, r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyClass(mlflow.pyfunc.PythonModel):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def predict(self, context, model_input):\n",
+    "\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#     warnings.filterwarnings(\"ignore\")\n",
+    "np.random.seed(40)\n",
+    "\n",
+    "# Read the wine-quality csv file from the URL\n",
+    "csv_url = (\n",
+    "    \"http://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/winequality-red.csv\"\n",
+    ")\n",
+    "try:\n",
+    "    data = pd.read_csv(csv_url, sep=\";\")\n",
+    "except Exception as e:\n",
+    "    logger.exception(\n",
+    "        \"Unable to download training & test CSV, check your internet connection. Error: %s\", e\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data into training and test sets. (0.75, 0.25) split.\n",
+    "train, test = train_test_split(data)\n",
+    "\n",
+    "# The predicted column is \"quality\" which is a scalar from [3, 9]\n",
+    "train_x = train.drop([\"quality\"], axis=1)\n",
+    "test_x = test.drop([\"quality\"], axis=1)\n",
+    "train_y = train[[\"quality\"]]\n",
+    "test_y = test[[\"quality\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = 0.5\n",
+    "l1_ratio = 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlflow.end_run()\n",
+    "run = mlflow.start_run(run_name='var2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ActiveRun: >"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elasticnet model (alpha=0.500000, l1_ratio=0.500000):\n",
+      "  RMSE: 0.6973640882698054\n",
+      "  MAE: 0.57695990577177\n",
+      "  R2: 0.15876721742193922\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "lr = ElasticNet(alpha=alpha, l1_ratio=l1_ratio, random_state=42)\n",
+    "lr.fit(train_x, train_y)\n",
+    "\n",
+    "predicted_qualities = lr.predict(test_x)\n",
+    "\n",
+    "(rmse, mae, r2) = eval_metrics(test_y, predicted_qualities)\n",
+    "\n",
+    "print(\"Elasticnet model (alpha=%f, l1_ratio=%f):\" % (alpha, l1_ratio))\n",
+    "print(\"  RMSE: %s\" % rmse)\n",
+    "print(\"  MAE: %s\" % mae)\n",
+    "print(\"  R2: %s\" % r2)\n",
+    "\n",
+    "mlflow.log_param(\"alpha\", alpha)\n",
+    "mlflow.log_param(\"l1_ratio\", l1_ratio)\n",
+    "mlflow.log_metric(\"rmse\", rmse)\n",
+    "mlflow.log_metric(\"r2\", r2)\n",
+    "mlflow.log_metric(\"mae\", mae)\n",
+    "\n",
+    "tracking_url_type_store = urlparse(mlflow.get_tracking_uri()).scheme\n",
+    "\n",
+    "# Model registry does not work with file store\n",
+    "if tracking_url_type_store != \"file\":\n",
+    "\n",
+    "    # Register the model\n",
+    "    # There are other ways to use the Model Registry, which depends on the use case,\n",
+    "    # please refer to the doc for more information:\n",
+    "    # https://mlflow.org/docs/latest/model-registry.html#api-workflow\n",
+    "    mlflow.sklearn.log_model(lr, \"model\", registered_model_name=\"ElasticnetWineModel\")\n",
+    "else:\n",
+    "    file_path = 'my_pkl.pkl'\n",
+    "    with open(file_path, 'wb') as file:\n",
+    "        s = pickle.dump(lr, file)\n",
+    "        # my_model = Model(artifact_path=file_path, run_id=run.info.run_id)\n",
+    "        mlflow.pyfunc.log_model(artifact_path=file_path, python_model=MyClass())\n",
+    "        os.remove(file_path)\n",
+    "        # my_model.add_flavor(name='mlflow.pyfunc')\n",
+    "        # my_model.save('out.pkl')\n",
+    "\n",
+    "\n",
+    "#     mlflow.sklearn.log_model(lr, \"model\")"
+   ]
   },
   {
    "cell_type": "code",
